--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
 body {
   background-color: aliceblue;
-  font-family: Futura, "Helvetica", sans-serif;
+  font-family: "Futura", "Helvetica", sans-serif;
   color:lightslategray;
   margin-top: 50px;
   margin-bottom: 50px;
